# FlintEngine

./: .gitignore  CMakeLists.txt  FlatEngine.sln  README.md  imgui_default.ini
Editor/: AssetExplorer.cpp  AssetExplorer.h  AssetHandles.cpp  AssetHandles.h  AssetMiner.cpp  AssetMiner.h  AssetOpener.cpp  AssetOpener.h  ComponentEditor.cpp  ComponentEditor.h  DirectoryTreeExplorer.cpp  DirectoryTreeExplorer.h  Editor.cpp  Editor.h  EditorGameRunner.cpp  EditorGameRunner.h  FieldEditor.cpp  FieldEditor.h  GameObjectEditor.cpp  GameObjectEditor.h  GameObjectPropertyEditor.cpp  GameObjectPropertyEditor.h  HierarchyEditor.cpp  HierarchyEditor.h  IEditableGameObject.h  IPropertyEditor.h  IndentPrinter.cpp  IndentPrinter.h  PlainGameObject.cpp  PlainGameObject.h  PrefabInstance.cpp  PrefabInstance.h  PrefabSaver.cpp  PrefabSaver.h  PropertyEditor.cpp  PropertyEditor.h  Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h  (+17 more)
Editor/Assets/: basic_bullet.prefab  basic_bullet.prefab.bak  main.scene  player.prefab
Editor/Test Assets/: basic_bullet.prefab  lab.prefab.bak  power_bullet.prefab  super_firearm.prefab  test.prefab
Editor/resources/: basic_bullet.prefab.bak
Editor/src/: AssetExplorer.cpp  AssetExplorer.h  AssetHandles.cpp  AssetMiner.cpp  AssetMiner.h  AssetOpener.cpp  ComponentEditor.h  FieldEditor.h  HierarchyEditor.cpp  HierarchyEditor.h  IndentPrinter.h  PrefabSaver.h  PropertyEditor.h  SceneEditor.cpp  SceneEditor.h  ScenePropertyEditor.cpp  SceneSaver.cpp  SceneSaver.h  SelectedObjectManager.h  ViewportController.h  Widgets.cpp
FlatEngine/: AssetManager.cpp  AssetManager.h  BoxCollider.cpp  BoxCollider.h  ComponentDefinition.cpp  ComponentDefinition.h  ComponentFieldDefinition.cpp  ComponentFieldDefinition.h  ComponentSerializer.cpp  ComponentSerializer.h  DebugConfig.cpp  DebugRenderer.cpp  DebugRenderer.h  Draw.cpp  Draw.h  EditableScene.cpp  EditableScene.h  GameBase.cpp  GameBase.h  GameObject.cpp  GameObject.h  GameObjectLoader.cpp  GameObjectLoader.h  GameObjectSerializer.cpp  GameObjectSerializer.h  IEditableGameObject.cpp  IEditableGameObject.h  IHierarchyEditable.h  IUpdateable.h  IndentFileParser.h  InlineGameObject.cpp  InlineGameObject.h  InputController.cpp  InputController.h  ObjectComponent.cpp  ObjectComponent.h  ObjectManager.cpp  ObjectManager.h  ObjectRenderer.cpp  ObjectRenderer.h  (+37 more)
FlatEngine/imgui/: imgui.cpp  imgui_internal.h
FlatEngine/src/: AssetManager.cpp  ComponentFieldDefinition.cpp  Draw.h  GameObjectLoader.h  IndentFileParser.cpp  InputController.cpp  ObjectManager.h  ObjectRenderer.cpp  PhysicsSystem.cpp  PrefabInstance.cpp  RectangleRenderer.cpp  SceneLoader.h  SceneRenderer.cpp  Timer.cpp  Vector.cpp  utility.h
FlatEngineTests/: FakeAssetManager.h  GameObjectSerializerTests.cpp  PrefabInstanceTests.cpp  SceneEditableToRuntimeTests.cpp
FlatEngineTests/src/: GameObjectSerializerTests.cpp  PrefabInstanceTests.cpp
LabyrinthShooter/: Bullet.cpp  Bullet.h  Cage.cpp  Cage.h  ColliderMemory.cpp  ColliderMemory.h  ConstantMover.cpp  ConstantMover.h  Firearm.cpp  Firearm.h  Game.cpp  Game.h  GameBase.cpp  GameBase.h  Health.cpp  Health.h  Labirynt.cpp  Labirynt.h  LabyrinthScene.cpp  LabyrinthScene.h  LabyrinthShooterClient.cpp  LabyrinthSolidifier.cpp  LabyrinthSolidifier.h  PlayerController.cpp  PlayerController.h  PlayerEquipment.cpp  PlayerEquipment.h  PlayerPositionsGenerator.h  PowerBullet.cpp  PowerBullet.h  PrefabFactory.cpp  PrefabFactory.h  PrefabLoader.cpp  PrefabLoader.h  Regenerable.cpp  Regenerable.h  Shared.h  StatRenderer.cpp  StatRenderer.h  imgui.ini
LabyrinthShooter/Assets/: basic_firearm.prefab  lab.prefab  main.scene.bak  player.prefab  player.prefab.bak  super_firearm.prefab
LabyrinthShooter/resources/: basic_bullet.prefab  basic_bullet.prefab.bak  basic_firearm.prefab  lab.prefab  main.scene  main.scene.bak  wall.prefab
LabyrinthShooter/src/: Game.h  LabyrinthScene.cpp
LabyrinthShooterBase/: Bullet.cpp  Bullet.h  ColliderMemory.cpp  ConstantMover.cpp  ConstantMover.h  Destroyable.cpp  Destroyable.h  Firearm.cpp  Firearm.h  Health.cpp  Health.h  LabyrinthSolidifier.cpp  LabyrinthSolidifier.h  PlayerController.cpp  PlayerController.h  PlayerEquipment.cpp  PlayerEquipment.h  PowerBullet.cpp  PowerBullet.h  Regenerable.cpp  Regenerable.h  Shared.h  StatRenderer.cpp  StatRenderer.h
LabyrinthShooterBase/src/: Bullet.cpp  Bullet.h  ColliderMemory.h  ConstantMover.cpp  Destroyable.cpp  Destroyable.h  Firearm.cpp  Health.h  Labirynt.h  LabyrinthSolidifier.cpp  LabyrinthSolidifier.h  PlayerController.cpp  PlayerController.h  PlayerEquipment.cpp  PlayerEquipment.h  PowerBullet.cpp  Regenerable.cpp
LabyrinthShooterClient/: LabyrinthShooterClient.sln
LabyrinthShooterClient/LabyrinthShooterClient/: ClientSinglePlayer.cpp  ClientSinglePlayer.h  GameRoom.cpp  GameRoom.h  GameRoomFinder.cpp  GameRoomFinder.h  LabyrinthShooterClient.cpp
Networking/: GameInfoReceiver.cpp  Server.cpp  Server.h  client.cpp  client.h  connectionHandler.h
src/Editor/: AssetHandles.cpp  AssetHandles.h  AssetOpener.h  DirectoryTreeExplorer.h  Editor.cpp  Editor.h  EditorGameRunner.cpp  EditorGameRunner.h  HierarchyEditor.cpp  HierarchyEditor.h  PropertyEditor.h  SceneEditor.cpp  SceneEditor.h  SceneSaver.h  SelectedObjectManager.h  ViewportController.h  Widgets.h  main.cpp
src/FlatEngine/: ComponentDefinition.cpp  DebugRenderer.cpp  EditableScene.cpp  EditableScene.h  GameBase.cpp  IEditableGameObject.h  InlineGameObject.cpp  InlineGameObject.h  ObjectManager.cpp  ObjectManager.h  PrefabInstance.h  Scene.cpp  Scene.h  SerializableTypes.h  TextBox.h  Vector.h
src/FlatEngineTests/: FakeAssetManager.h  GameObjectSerializerTests.cpp  PrefabInstanceTests.cpp  SceneEditableToRuntimeTests.cpp
src/FlintEngine/: AssetManager.cpp  AssetManager.h  ComponentDefinition.h  ComponentFieldChange.h  ComponentFieldDefinition.h  DebugConfig.h  Draw.cpp  Draw.h  EditableScene.h  GameBase.cpp  IEditableGameObject.cpp  IUpdateable.h  InlineGameObject.h  InputController.cpp  InputController.h  ObjectManager.cpp  ObjectManager.h  ObjectRenderer.h  Scene.cpp  (+18 more)
(+260 files in other folders)
